# i18n-runtime

./: CHANGELOG.md  Cargo.toml  README.md
i18n-app/: CHANGELOG.md  Cargo.toml  README.md  messages.schema.json
i18n-app/locales/: en-IN.json  en.json  hi-IN.json
i18n-app/src/: main.rs
i18n-app/src/generated_i18n/: generated_keys.rs  mod.rs
i18n-app/src/generated_i18n/locales/: EN.rs  EN_IN.rs  HI_IN.rs
i18n-codegen/: CHANGELOG.md  Cargo.toml  README.md
i18n-gen/: CHANGELOG.md  Cargo.toml  README.md
i18n-gen/src/: main.rs
i18n-runtime/: CHANGELOG.md  Cargo.toml  README.md
i18n-runtime/src/: i18n.rs  lib.rs
