[package]
name = "i18n-app"
version = "0.2.0"
edition = "2024"
authors = ["Sumit Kumar <sharansumitkumar@gmail.com>"]
license = "MIT"
description = "Demo application for i18n-runtime and i18n-gen showing runtime JSON and generated PHF i18n modes."
readme = "README.md"
repository = "https://github.com/sumitsharansatsangi/i18n-runtime"
keywords = ["i18n", "localization", "demo"]
categories = ["internationalization", "development-tools"]

[dependencies]
i18n-runtime = { version = "0.2.0", path = "../i18n-runtime" }
phf = { version = "0.14.0", features = ["macros"] }
