[package]
name = "i18n-gen"
version = "0.1.0"
edition = "2024"
authors = ["Sumit Kumar <sharansumitkumar@gmail.com>"]
license = "MIT"
description = "CLI tool that generates fast, type-safe Rust i18n code (MessageKey enum + PHF maps) from JSON schema and locales."
readme = "README.md"
repository = "https://github.com/sumitsharansatsangi/i18n-runtime"
keywords = ["i18n", "localization", "codegen", "phf"]
categories = ["development-tools::build-utils", "internationalization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.13.1", features = ["macros"] }
walkdir = "2.3"
anyhow = "1.0"

[[bin]]
name = "i18n-gen"
path = "src/main.rs"